--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 asgiref==3.8.1
 Django==5.0.4
+django-browser-reload==1.12.1
+django-tailwind==3.8.0
 python-dotenv==1.0.1
 sqlparse==0.4.4
 typing_extensions==4.10.0
